--- a/01 - Application/api/src/main/resources/application.properties
+++ b/01 - Application/api/src/main/resources/application.properties
@@ -1,13 +1,22 @@
 spring.devtools.restart.exclude=*META-INF/maven/,META-INF/resources/,resources/,static/,public/,templates/,**/*Test.class,**/Tests.class,git.properties,META-INF/build-info.properties
 
+springdoc.api-docs.path = /api
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
- 
-spring.datasource.url=jdbc:mysql://localhost:3306/futnetsinglemaster?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/futnetsinglemaster
+spring.datasource.username=paschek
+spring.datasource.password=Emf123
  
 #jpa vendor adapter configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
+#Mail configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=killian.pasche7@gmail.com
+spring.mail.password=kxfwzestajvpjarp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
