--- a/01 - Application/api/src/main/resources/application.properties
+++ b/01 - Application/api/src/main/resources/application.properties
@@ -2,9 +2,13 @@ spring.devtools.restart.exclude=*META-INF/maven/,META-INF/resources/,resources/,
 
 springdoc.api-docs.path = /api
 
+server.port=8082
+
+spring.jackson.serialization.fail-on-empty-beans=false
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/futnetsinglemaster
+spring.datasource.url=jdbc:mysql://localhost:3307/futnetsinglemaster
 spring.datasource.username=paschek
 spring.datasource.password=Emf123
  
