--- a/01 - Application/api/src/main/resources/application.properties
+++ b/01 - Application/api/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/futnetsinglemaster
+spring.datasource.url=jdbc:mysql://localhost:8889/futnetsinglemaster
 spring.datasource.username=paschek
 spring.datasource.password=Emf123
  
@@ -24,3 +24,12 @@ spring.mail.username=killian.pasche7@gmail.com
 spring.mail.password=kxfwzestajvpjarp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+#Loggin
+logging.level.org.springframework.security=TRACE
+
+
+#security
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
