--- a/01 - Application/futnetsinglemaster/package.json
+++ b/01 - Application/futnetsinglemaster/package.json
@@ -10,9 +10,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
+    "laravel-vue-pagination": "^4.1.0",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vuetify": "^3.3.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
