--- a/01 - Application/futnetsinglemasterts/package.json
+++ b/01 - Application/futnetsinglemasterts/package.json
@@ -13,6 +13,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
+    "datatables.net-bs5": "^1.13.4",
+    "datatables.net-responsive": "^2.4.1",
+    "datatables.net-select": "^1.6.2",
+    "datatables.net-vue3": "^2.1.0",
     "pinia": "^2.0.36",
     "sass": "^1.62.1",
     "vue": "^3.3.2",
