--- a/01 - Application/futnetsinglemasterts/package.json
+++ b/01 - Application/futnetsinglemasterts/package.json
@@ -21,7 +21,9 @@
     "pinia": "^2.0.36",
     "sass": "^1.62.1",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-easy-data-table": "^1.5.42"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
