--- a/01 - Applications/api/src/main/resources/application.properties
+++ b/01 - Applications/api/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:8889/futnetsinglemaster
-spring.datasource.username=paschek
-spring.datasource.password=Emf123
+spring.datasource.username=
+spring.datasource.password=
  
 #jpa vendor adapter configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
@@ -17,10 +17,10 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 #Mail configuration
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=killian.pasche7@gmail.com
-spring.mail.password=kxfwzestajvpjarp
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
